add raw data to web app

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,8 @@
 *.pyc
 scratch.html
+models/training_data/all_training_data.json
+models/training_data/eva_100_training_data.json
+models/training_data/haddad_training_data.json
+models/training_data/readme.txt
+models/training_data/response_matrix.csv
+models/training_data/response_matrix.json
